# licitai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
configs/: config.yaml  gcs.yaml  mlflow.yaml  paths.yaml
configs/etl/: ingest.yaml
configs/model/: bm25.yaml  ensemble.yaml  mf.yaml
docs/: mkdocs.yml
docs/docs/: index.md
licitai/: dataset.py  features.py  plots.py
licitai/modeling/: predict.py  train.py
licitai/utils/: debug_config.py
notebooks/: 1.0-tb-data-exploration.ipynb
outputs/2025-11-19/21-12-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-19/21-14-34/.hydra/: config.yaml  hydra.yaml
references/: Tasks_LicitAI.xlsx  ~$Tasks_LicitAI.xlsx
