[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "licitai"
version = "0.0.1"
description = "Sistema inteligente para recomendar oportunidades en compras públicas usando IA"
authors = [
  { name = "Tomás Bustamante Hernández" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "pyarrow (>=20.0.0,<21.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "scikit-surprise (>=1.1.4,<2.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "annoy (>=1.17.3,<2.0.0)",
    "duckdb (>=1.3.0,<2.0.0)",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["licitai"]
include = ["pyproject.toml", "licitai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["licitai"]
force-sort-within-sections = true


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
jupyter = "^1.1.1"

