[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "licitai"
version = "0.0.1"
description = "Recomendador de licitaciones p\u00fablicas (tesis MCD USACH)."
authors = [
  { name = "Tom\u00e1s Bustamante" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["licitai"]
include = ["pyproject.toml", "licitai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["licitai"]
force-sort-within-sections = true

