[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "licitai"
version = "0.0.1"
description = "Recomendador de licitaciones p\u00fablicas (tesis MCD USACH)."
authors = [
  { name = "Tom\u00e1s Bustamante" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "duckdb (>=1.4.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "implicit (>=0.7.2,<0.8.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "google-cloud-storage (>=3.5.0,<4.0.0)",
    "gcsfs (>=2025.10.0,<2026.0.0)",
    "fsspec (>=2025.10.0,<2026.0.0)",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["licitai"]
include = ["pyproject.toml", "licitai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["licitai"]
force-sort-within-sections = true


[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "nbstripout (>=0.8.1,<0.9.0)"
]
